--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
+    <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
 </body>
